// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component with children props 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
  style={undefined}
>
  <div>
    Hello
  </div>
</ul>
`;

exports[`List component with style props 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
  style={
    Object {
      "width": 100,
    }
  }
/>
`;

exports[`ListItem  with children props 1`] = `
<li
  className="MuiListItem-root-10 MuiListItem-gutters-17 MuiListItem-default-13"
  disabled={false}
  onClick={undefined}
>
  <div
    className="MuiListItemText-root-20"
  >
    <h3
      className="MuiTypography-root-25 MuiTypography-subheading-32 MuiListItemText-text-23"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-49"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
        />
      </svg>
    </h3>
  </div>
</li>
`;

exports[`ListItem with   style props 1`] = `
<li
  className="MuiListItem-root-10 MuiListItem-gutters-17 MuiListItem-default-13"
  disabled={false}
  onClick={undefined}
  style={
    Object {
      "width": 100,
    }
  }
/>
`;

exports[`ListItem with action props 1`] = `
<div
  className="MuiListItem-container-11"
>
  <li
    action={<getContext(BlueRainAvatar) />}
    className="MuiListItem-root-10 MuiListItem-gutters-17 MuiListItem-secondaryAction-19 MuiListItem-default-13"
    disabled={false}
    onClick={undefined}
  >
    <div
      className="MuiListItemText-root-20"
    >
      <h3
        className="MuiTypography-root-25 MuiTypography-subheading-32 MuiListItemText-text-23"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-49"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
          />
        </svg>
      </h3>
    </div>
  </li>
  <div
    className="MuiListItemSecondaryAction-root-56"
  >
    <img
      source={undefined}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "lightgrey",
            "borderRadius": 1000,
            "display": "flex",
            "fontSize": 35,
            "height": 70,
            "justifyContent": "center",
            "width": 70,
          },
          Object {},
        ]
      }
    />
  </div>
</div>
`;

exports[`ListItem with avatar props 1`] = `
<li
  avatar={<getContext(BlueRainAvatar) />}
  className="MuiListItem-root-10 MuiListItem-gutters-17 MuiListItem-default-13"
  disabled={false}
  onClick={undefined}
>
  <img
    source={undefined}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "lightgrey",
          "borderRadius": 1000,
          "display": "flex",
          "fontSize": 35,
          "height": 70,
          "justifyContent": "center",
          "width": 70,
        },
        Object {},
      ]
    }
  />
</li>
`;

exports[`ListItem with primary props 1`] = `
<li
  className="MuiListItem-root-10 MuiListItem-gutters-17 MuiListItem-default-13"
  disabled={false}
  onClick={undefined}
  primary="hello"
>
  <div
    className="MuiListItemText-root-20"
  >
    <h3
      className="MuiTypography-root-25 MuiTypography-subheading-32 MuiListItemText-text-23"
    >
      hello
    </h3>
    
  </div>
  <div
    className="MuiListItemText-root-20"
  >
    <h3
      className="MuiTypography-root-25 MuiTypography-subheading-32 MuiListItemText-text-23"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-49"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
        />
      </svg>
    </h3>
  </div>
</li>
`;

exports[`ListItem with secondary props 1`] = `
<li
  className="MuiListItem-root-10 MuiListItem-gutters-17 MuiListItem-default-13"
  disabled={false}
  onClick={undefined}
  secondary="Hi"
>
  <div
    className="MuiListItemText-root-20"
  >
    
    <p
      className="MuiTypography-root-25 MuiTypography-body1-34 MuiTypography-colorSecondary-46 MuiListItemText-text-23"
    >
      Hi
    </p>
  </div>
  <div
    className="MuiListItemText-root-20"
  >
    <h3
      className="MuiTypography-root-25 MuiTypography-subheading-32 MuiListItemText-text-23"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-49"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
        />
      </svg>
    </h3>
  </div>
</li>
`;

exports[`ListSuheader with children props 1`] = `
<li
  className="MuiListSubheader-root-5 MuiListSubheader-sticky-9"
>
  I am Header of list
</li>
`;
